--- a/crates/sqs/Cargo.toml
+++ b/crates/sqs/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2024"
 aws-config = { version = "1.8", features = ["behavior-version-latest"] }
 aws-sdk-sqs = "1"
 thiserror = "2"
+serde_json = "1"
 
 [dev-dependencies]
 anyhow = "1"
