--- a/crates/sqs/Cargo.toml
+++ b/crates/sqs/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
-name = "sqs"
+name = "aws_utils_sqs"
 version = "0.1.0"
 edition = "2024"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "AWS SQS utilities for Rust"
+homepage = "https://github.com/UniqueVision/utilities.aws-utils"
+repository = "https://github.com/your-username/utilities.aws-utils"
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+keywords = ["aws", "sqs", "queue", "messaging"]
+categories = ["api-bindings", "asynchronous"]
 
 [dependencies]
 aws-config = { version = "1.8", features = ["behavior-version-latest"] }
