--- a/crates/scheduler/Cargo.toml
+++ b/crates/scheduler/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 aws-config = { version = "1", features = ["behavior-version-latest"] }
 aws-sdk-scheduler = "1"
+aws-smithy-types-convert = { version = "0.60", features = ["convert-streams"] }
 chrono = { version = "0.4", features = ["serde", "clock"] }
+futures-util = "0.3.31"
 thiserror = "2"
