--- a/crates/s3/Cargo.toml
+++ b/crates/s3/Cargo.toml
@@ -18,3 +18,4 @@ aws-smithy-types-convert = { version = "0.60.9", features = ["convert-streams"] 
 futures-util = "0.3.31"
 thiserror = "2"
 tokio = { version = "1", features = ["io-util"] }
+urlencoding = "2.1.3"
