--- a/crates/dynamodb/Cargo.toml
+++ b/crates/dynamodb/Cargo.toml
@@ -9,3 +9,4 @@ aws-sdk-dynamodb = "1"
 aws-smithy-types-convert = { version = "0.60.9", features = ["convert-streams"] }
 futures-util = "0.3.31"
 thiserror = "2"
+tokio = { version = "1", features = ["time"] }
